--- a/index.html
+++ b/index.html
@@ -10288,7 +10288,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210926152213800" list="Home" modified="20210926152317400" title="$:/StoryList">
+<div created="20210927202852000" list="Home" modified="20210927202852000" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10707,7 +10707,7 @@ and now the kinetic evolution at different levels of resolution
 * [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
 * [[Chapter 8: Phase transitions and critical phenomena|Animations - Chapter 8]].</pre>
 </div>
-<div created="20201124000927970" modified="20210926152137000" tags="" title="Class Notes">
+<div created="20201124000927970" modified="20210927204735100" tags="" title="Class Notes">
 <pre>A good part of this course will be based on the following, self-contained, [ext[notes|files/phys5201_notes.pdf]]. You can download them if you wish. Not all topics in this course are covered in the notes, so additional reading suggestions are given below.
 
 !!!! September 8 - 17: Chapter 1. Review of Thermodynamics
@@ -10732,11 +10732,13 @@ Supplementary notes on topics not covered in class that may be of interest.
 * Large systems and self averaging. [ext[Class notes|files/phys5201_notes.pdf]]. Pages 7-11.
 * Correlations in space. [ext[Class notes|files/phys5201_notes.pdf]]. Pages 13-15.
 
-!!!! September 27: Chapter 3. Review of Statistical Mechanics.
+!!!! September 27-29: Chapter 3. Review of Statistical Mechanics.
 
 * Simulation of a large system. Discussion of [[independence|https://mattbierbaum.github.io/ising.js/]].
-* Entropy, partition function, and rules of calculation. [ext[Class notes|http://files/phys5201_notes.pdf]]. Pages 27-30.
-* Example: two level system.
+* Entropy, partition function, and rules of calculation. [ext[Class notes|files/phys5201_notes.pdf]]. Pages 27-30.
+* Example: two level system. Chandler, pages 66-68.
+* Other rules of calculation (aka ensembles). Schwabl, pages 63-68. Chandler, pages 69-71.
+* Gibbs entropy formula. Schwabl, pages 63-68. Chandler, pages 74-79.
 
 Additional notes have been uploaded (complex read):
 
@@ -10744,28 +10746,23 @@ Additional notes have been uploaded (complex read):
 
 ---
 
-!!!! Chapter 3. Basic rules of calculation.
+!!!! October 1: Chapter 4. Ideal Systems
 
-A suggested reading guide from the book by Schwabl is as follows:
+* Systems of non interacting classical particles.
+* Quantum systems and wave function symmetry. Indistinguishability and quantum statistics.
+* Occupation numbers; density of states.
+* Quantum statistics of non interacting particles. Classical limit. Schwabl. pages 169-176.
+* Classical ideal gas.
 
-* Equilibrium ensembles, pages 25-32, 34-45. 
-* Gibbs Entropy. Schwabl, pages 61-63.
-* Other ensembles. Schwabl, pages 63-68.
-* Fluctuations and thermodynamic stability. Schwabl pages 89-90.
+!!!! Chapter 5. Quantum ideal systems
 
-!!!! Chapter 4. Ideal Systems
-
-* Ideal Gas. Schwabl, pages 46-48.
-* Virial Theorem and Equipartition. Schwabl, pages 54-55.
-
-!!! Chapter 5. Quantum ideal systems
-* Ideal quantum systems, quantum statistics and the classical limit. Schwabl. pages 169-176.
+* Ideal quantum systems, quantum statistics and the classical limit. 
 * Blackbody radiation. Schwabl, pages 197-205.
-* Lattice vibrations. Schwabl, pages 206-213. [ext[Notes on normal modes and their quantizattion|files/lattice_vibration_phonons.pdf]].
+* Lattice vibrations. Schwabl, pages 206-213. [ext[Notes on normal modes and their quantization|files/lattice_vibration_phonons.pdf]].
 * Free electron gas. Schwabl, pages 176-188.
 * Bose-Einstein condensation. Schwabl, pages 190-197.
 
-!!! Chapter 6. Fluctuations
+!!!! Chapter 6. Fluctuations
 *  [ext[Class notes|files/phys5201_notes.pdf]], chapters 4.3 and 4.4 are an introduction to fluctuations within thermodynamics.
 * Statistical Mechanics treatment of fluctuations in the case of a fluctuating interface. [ext[Class notes|files/phys5201_notes.pdf]], chapter 5. We will cover this chapter in its entirety. It is probably a first example for you of several important concepts in this semester:
 ** A particular system in which fluctuations are not negligible, in fact they are dominant.
