--- a/index.html
+++ b/index.html
@@ -10906,7 +10906,7 @@ $$
 # At coexistence between the liquid and solid phases, $\mu_{L} = \mu_{G}$. Find the pressure (vapor pressure as it is called) as a function of temperature at coexistence.
 </pre>
 </div>
-<div created="20210929155601600" modified="20210929181922600" title="Homework 2 2021">
+<div created="20210929155601600" modified="20210929201501800" title="Homework 2 2021">
 <pre>''Due Wednesday, October 6, 2021''
 
 !!!! Question 1. Probability of equilibrium fluctuations
@@ -10918,16 +10918,17 @@ $$
 imagining that we have summed $$p_{\nu}$$ over all the states $$\nu$$ that have an energy $$E$$. We wish to show that the probability distribution $$p(E)$$ is very narrow and centered around $$\langle E \rangle$$, the average value of $$E$$. In other words, observing values of $$E$$ other than $$\langle E \rangle$$ is extremely rare.
 
 # Estimate $$p(E)$$ around its average by expanding $$\ln p(E)$$ in Taylor series around $$\langle E \rangle$$ up to second order in $$E-\langle E \rangle$$. Show that the first order term is zero, and express the second order term as a function of the heat capacity $$C_{V}$$. Remember Boltzmann formula $$S(E) = k_{B} \ln \Omega(E)$$.
-# Use this expression to estimate the relative probability ($$p(E)/p( \langle E  \rangle)$$) of observing a fluctuation as small as $$10^{-6} \langle E \rangle$$ for an ideal gas of $$N = 0.001$$ mol.
+# Use this expression to estimate the relative probability $$p(E)/p( \langle E  \rangle)$$ of observing a fluctuation as small as $$10^{-6} \langle E \rangle$$ for an ideal gas of $$N = 0.001$$ mol. (Use known formulae for the average energy and heat capacity at constant volume for an ideal gas).
 
 !!!! Question 2
 A system is composed of two harmonic oscillators, each of natural frequency $$\omega_{0}$$, and having permissible energies $$(n+1/2) \hbar \omega_{0}$$, where $$n$$ is any non-negative integer.  The total energy of the system is $$E'=n'\hbar \omega_{0}$$, where $$n'$$ is a positive integer.
+
 * For a given energy, how many microstates are available to the system ? What is the entropy of the system ? 
 * A second system is also composed of two harmonic oscillators, each of natural frequency $$2\omega_{0}$$. The total energy of this system is $$E''=n'' \hbar \omega_{0}$$, where $$n''$$ is an even integer.
 ** How many microstates are available to this system ?
 ** What is the entropy of a system composed of the two preceeding subsystems (separated and enclosed by a totally restrictive wall) ? Express the entropy as a function of $$E'$$ and $$E''$$.
 
-!!! Question 3
+!!!! Question 3
 Consider a set of independent and quantum harmonic oscillators such that the energy levels of each oscillator is discrete and given by
 $$
 \epsilon_{k} = \left( k + \frac{1}{2} \right) h \nu, \quad k=0,1,2 \ldots,
@@ -10941,22 +10942,7 @@ $$
 # Define a characteristic temperature of the oscillator through $$k_{B} \theta = h \nu$$, and calculate the value of $$\theta$$ for a frequency in the infrared region of the electromagnetic spectrum (say $$\nu = 10^{13}Hz$$).
 # Calculate the fractional occupation number of the energy levels $$&lt;n_{k}&gt;/&lt;N&gt;$$. Obtain specific values of this ratio for $$T=\theta$$, and for the lowest energy levels $$k=0, 1, 2,$$ and 3.
 # Calculate the probability that the oscillator is in a state of odd quantum number ($$k=1, 3, 5 ...$$) at temperature $$T$$.
-# Obtain the internal energy $$&lt;E&gt;$$ and the heat capacity at constant volume. Study the limits of both properties as $$T \ll \theta$$ and $$T \gg \theta$$.
-
-!!! Question 4
-Consider the following approximate model of a liquid: interactions between molecules are neglected except that all molecules experience a constant binding energy $$- \eta$$ that confines their motion to a volume $$v_{0}$$ per particle.
-
-# Show that for a classical liquid of $$N$$ indistinguishable molecules, the partition function is, $$
-Z_{L} = \frac{1}{N_{L}!} \left[ N_{L} v_{0} e^{\beta \eta} Z_{p}
-  \right]^{N_{L}},
-$$
-where $$Z_{p}$$ denotes the ideal gas contribution arising from the integral over momenta,$$
-Z_{p} = \frac{1}{h^{3}} \int d^{3}p e^{-\beta p^{2}/2m}.
-$$
-
-# Calculate the chemical potential of the liquid $$\mu_{L}$$ and of a vapor phase $$\mu_{G}$$ assumed to be an ideal gas.
-# At coexistence between the liquid and solid phases, $$\mu_{L} = \mu_{G}$$. Find the pressure (vapor pressure as it is called) as a function of temperature at coexistence.
-</pre>
+# Obtain the internal energy $$&lt;E&gt;$$ and the heat capacity at constant volume. Study the limits of both properties as $$T \ll \theta$$ and $$T \gg \theta$$.</pre>
 </div>
 <div created="20201124000237208" modified="20201124000252118" title="Homework 3 2019">
 <pre>''Due Monday, October 14, 2019''
