--- a/index.html
+++ b/index.html
@@ -10290,7 +10290,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="Home" title="$:/StoryList">
+<div created="20210930142142500" list="Home" modified="20210930145120800" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10709,7 +10709,7 @@ and now the kinetic evolution at different levels of resolution
 * [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
 * [[Chapter 8: Phase transitions and critical phenomena|Animations - Chapter 8]].</pre>
 </div>
-<div created="20201124000927970" modified="20210927204735100" tags="" title="Class Notes">
+<div created="20201124000927970" modified="20210930154820600" tags="" title="Class Notes">
 <pre>A good part of this course will be based on the following, self-contained, [ext[notes|files/phys5201_notes.pdf]]. You can download them if you wish. Not all topics in this course are covered in the notes, so additional reading suggestions are given below.
 
 !!!! September 8 - 17: Chapter 1. Review of Thermodynamics
@@ -10728,37 +10728,37 @@ Supplementary notes on topics not covered in class that may be of interest.
 * A derivation of the [ext[Euler and Gibbs-Duhem|files/GibbsDuhem.pdf]] equations. 
 * [ext[Ideal mixtures|files/ideal_mixture.pdf]].
 
-!!!! September 20 - 24: Chapter 2. Elements of probability; central limit theorem.
+!!!! September 20 - 24: Chapter 2. Elements of probability; central limit theorem
+
 * Random variables. [ext[Class notes|files/phys5201_notes.pdf]]. Pages 1-5.
 * Independence and Central Limit Theorem. [ext[files/phys5201_notes.pdf]]. Pages 11-13.
 * Large systems and self averaging. [ext[Class notes|files/phys5201_notes.pdf]]. Pages 7-11.
 * Correlations in space. [ext[Class notes|files/phys5201_notes.pdf]]. Pages 13-15.
 
-!!!! September 27-29: Chapter 3. Review of Statistical Mechanics.
+!!!! September 27 - October 1: Chapter 3. Review of Statistical Mechanics
 
 * Simulation of a large system. Discussion of [[independence|https://mattbierbaum.github.io/ising.js/]].
 * Entropy, partition function, and rules of calculation. [ext[Class notes|files/phys5201_notes.pdf]]. Pages 27-30.
 * Example: two level system. Chandler, pages 66-68.
-* Other rules of calculation (aka ensembles). Schwabl, pages 63-68. Chandler, pages 69-71.
+* Other rules of calculation (aka ensembles), and systems at constant chemical potential. Schwabl, pages 63-68. Chandler, pages 69-71.
 * Gibbs entropy formula. Schwabl, pages 63-68. Chandler, pages 74-79.
+* Non interacting (ideal), classical systems.
 
 Additional notes have been uploaded (complex read):
 
 * A critical discussion of the basic assumptions underlying the Statistical Mechanical description of macroscopic systems. It is [ext[Chapter 26|files/MaStatMechBasicAssumption.pdf]] of the book &quot;Statistical Mechanics&quot; by S.K. Ma. 
 
+!!!! October 4: Chapter 4. Quantum systems
+
+* Wave function symmetry. Bose and Fermi systems.
+* Description in terms of occupation numbers. Density of states. 
+* Quantum indistinguishability, Fermi-Dirac and Bose-Einstein statistics. [[Feller|https://homepages.spa.umn.edu/~vinals/classes/phys5201/notes/statistics.pdf]]. An Introduction to Probability Theory, Section 5a, pages 26-42.
+
 ---
-
-!!!! October 1: Chapter 4. Ideal Systems
-
-* Systems of non interacting classical particles.
-* Quantum systems and wave function symmetry. Indistinguishability and quantum statistics.
-* Occupation numbers; density of states.
-* Quantum statistics of non interacting particles. Classical limit. Schwabl. pages 169-176.
-* Classical ideal gas.
 
 !!!! Chapter 5. Quantum ideal systems
 
-* Ideal quantum systems, quantum statistics and the classical limit. 
+* Quantum statistics of non interacting particles. Classical limit. Ideal Gas.
 * Blackbody radiation. Schwabl, pages 197-205.
 * Lattice vibrations. Schwabl, pages 206-213. [ext[Notes on normal modes and their quantization|files/lattice_vibration_phonons.pdf]].
 * Free electron gas. Schwabl, pages 176-188.
@@ -11328,7 +11328,7 @@ where $\alpha$ and $\beta$ stand for either longitudinal $l$, or transverse $t$ 
 * [[One or two small points in thermodynamics|https://arxiv.org/abs/2003.03800]], by Walter F. Wreszinski. 
 * [[Local pressure for inhomogeneous fluids|https://arxiv.org/abs/2008.11709]]. Jim Dufty et al. August 2020. Discusses differences and equivalence between local thermodynamics pressure and pressure through hydrodynamics stress.</pre>
 </div>
-<div created="20201123235841562" modified="20210923021716010" title="Syllabus">
+<div created="20201123235841562" modified="20210930155042600" title="Syllabus">
 <pre>!!Course Information
 ''Instructor:'' Jorge Vi&amp;ntilde;als &lt;br&gt;
 ''Office:'' Tate Hall 130-17 &lt;br&gt;
@@ -11361,9 +11361,9 @@ This is a graduate level introduction to classical statistical and thermal physi
 !!!Topics
 # Review of Thermodynamics. First, second law. Local conditions for equilibrium and thermodynamic potentials. Maximum work theorem. Extensivity and the Gibbs-Duhem equation. Stability and response functions.
 # Random variables, independence, Gaussian distributions. The Central Limit Theorem. Phase space and probability densities. Large systems, independence of parts, and self-averaging. Correlations in macroscopic systems.
-# Review of Classical Statistical Mechanics. Basic rules of calculation. Closed systems and Entropy. Systems at constant temperature and chemical potential. Connection with Thermodynamics. Gibbs entropy formula. Thermodynamic fluctuations.
-# Ideal systems. Two level system. Ideal gas and internal modes. Density of states. Debye model of lattice vibrations. Black Body radiation. Equipartition of energy.
-# Quantum ideal systems. Fermi-Dirac and Bose-Einstein statistics. Classical limit. Free electron gas and electrons in a metal. Ideal Bose fluid and Bose condensation.
+# Review of Classical Statistical Mechanics. Basic rules of calculation. Closed systems and Entropy. Systems at constant temperature and partition function. Example of calculation: the two level system. Generalized ensembles, and systems at constant chemical potential. Fluctuations: general case. Gibbs entropy formula. Non interacting (ideal) systems.
+# Quantum systems. Wave function symmetry and description in terms of occupation numbers. Density of states. Quantum indistinguishability, Fermi-Dirac and Bose-Einstein statistics. 
+# Quantum statistics of non-interacting systems. Classical Limit, and classical ideal gas. Equipartition of energy. Black Body radiation, Debye model of lattice vibrations. Free electron gas and electrons in a metal. Ideal Bose fluid and Bose condensation.
 # Fluctuations. Response functions and stability. Probability of equilibrium fluctuations and correlations. Fluctuation-dissipation relation.
 # Fluctuations of surfaces. Gaussian surface, correlation functions and dimensionality. Surface tension. Impossibility of coexistence in one dimension.
 # Spontaneous broken symmetries. Fluctuations, correlation functions, and long ranged order. Goldstone Theorem.
