Fixed typo in hwk 3

--- a/index.html
+++ b/index.html
@@ -10292,7 +10292,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211007150938400" list="Home" modified="20211007150938400" title="$:/StoryList">
+<div created="20211008013850100" list="Home" modified="20211008013852100" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10991,13 +10991,13 @@ where $m, c$, and $\hbar$ are constants, and the two branches correspond to posi
 
 # Consider the low lying excitations of the dispersion relation (i.e., the limit of small $k$). What are the dominant temperature dependencies of the energy and heat capacity of the system ? Comment.</pre>
 </div>
-<div created="20211006145058900" modified="20211006150711500" title="Homework 3 2021">
+<div created="20211006145058900" modified="20211008013904000" title="Homework 3 2021">
 <pre>''Due Wednesday, October 13, 2021''
 
 !!!! Question 1
 Consider the following approximate model of a liquid: interactions between molecules are neglected except that all molecules experience a constant binding energy $$- \eta$$ that confines their motion to a volume $$v_{0}$$ per particle.
 
-# Show that for a classical liquid of $$N$$ indistinguishable molecules, the partition function is, $$
+# Show that for a classical liquid of $$N_{L}$$ indistinguishable molecules, the partition function is, $$
 Z_{L} = \frac{1}{N_{L}!} \left[ N_{L} v_{0} e^{\beta \eta} Z_{p}
   \right]^{N_{L}},
 $$ where $$Z_{p}$$ denotes the ideal gas contribution arising from the integral over momenta,$$
