--- a/index.html
+++ b/index.html
@@ -10294,7 +10294,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211015230832700" list="Home" modified="20211015231644900" title="$:/StoryList">
+<div list="Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10713,7 +10713,7 @@ and now the kinetic evolution at different levels of resolution
 * [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
 * [[Chapter 8: Phase transitions and critical phenomena|Animations - Chapter 8]].</pre>
 </div>
-<div created="20201124000927970" modified="20211007151256000" tags="" title="Class Notes">
+<div created="20201124000927970" modified="20211016012057700" tags="" title="Class Notes">
 <pre>A good part of this course will be based on the following, self-contained, [ext[notes|files/phys5201_notes.pdf]]. You can download them if you wish. Not all topics in this course are covered in the notes, so additional reading suggestions are given below.
 
 !!!! September 8 - 17: Chapter 1. Review of Thermodynamics
@@ -10758,12 +10758,20 @@ Additional notes have been uploaded (complex read):
 * Description in terms of occupation numbers. Density of states. 
 * Quantum indistinguishability, Fermi-Dirac and Bose-Einstein statistics. [[Feller|https://homepages.spa.umn.edu/~vinals/classes/phys5201/notes/statistics.pdf]]. An Introduction to Probability Theory, Section 5a, pages 26-42.
 
-!!!! October 6 - October xx. Chapter 5. Quantum ideal systems
+!!!! October 6 - October 15. Chapter 5. Quantum ideal systems. Part A
 
 * Quantum statistics of non interacting particles. Classical limit. Chandler.
 * Classical Ideal Gas.
 * Blackbody radiation. Schwabl, pages 197-205.
 * Lattice vibrations. Schwabl, pages 206-213. [ext[Notes on normal modes and their quantization|files/lattice_vibration_phonons.pdf]].
+
+---
+
+'' Mid Term Exam material''
+
+---
+
+!!!! October 18 - October xx. Chapter 5. Quantum ideal systems. Part B
 * Free electron gas. Schwabl, pages 176-188.
 * Bose-Einstein condensation. Schwabl, pages 190-197.
 
