Graphs of Fermi surfaces

--- a/index.html
+++ b/index.html
@@ -10294,7 +10294,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211013174358800" list="Home" modified="20211013175540500" title="$:/StoryList">
+<div created="20211018150830700" list="Home" modified="20211018150830700" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10713,7 +10713,7 @@ and now the kinetic evolution at different levels of resolution
 * [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
 * [[Chapter 8: Phase transitions and critical phenomena|Animations - Chapter 8]].</pre>
 </div>
-<div created="20201124000927970" modified="20211007151256000" tags="" title="Class Notes">
+<div created="20201124000927970" modified="20211018151518800" tags="" title="Class Notes">
 <pre>A good part of this course will be based on the following, self-contained, [ext[notes|files/phys5201_notes.pdf]]. You can download them if you wish. Not all topics in this course are covered in the notes, so additional reading suggestions are given below.
 
 !!!! September 8 - 17: Chapter 1. Review of Thermodynamics
@@ -10764,7 +10764,7 @@ Additional notes have been uploaded (complex read):
 * Classical Ideal Gas.
 * Blackbody radiation. Schwabl, pages 197-205.
 * Lattice vibrations. Schwabl, pages 206-213. [ext[Notes on normal modes and their quantization|files/lattice_vibration_phonons.pdf]].
-* Free electron gas. Schwabl, pages 176-188.
+* Free electron gas. Schwabl, pages 176-188. [[Fermi surface of a free electron gas in d=3|https://image1.slideserve.com/3005774/slide17-l.jpg]]. [[A more complex Fermi surface|https://www.researchgate.net/profile/Pasquale_Marra3/publication/344294543/figure/download/fig3/AS:936954082361345@1600398669638/Fermi-surface-of-WP-in-the-first-Brillouin-zone-with-spinorbit-coupling-In-panels-a.ppm]].
 * Bose-Einstein condensation. Schwabl, pages 190-197.
 
 ---
