Update class notes

--- a/index.html
+++ b/index.html
@@ -10294,7 +10294,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211020042445400" list="Home" modified="20211020042908000" title="$:/StoryList">
+<div created="20211027155204500" list="Home" modified="20211027155342900" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10713,7 +10713,7 @@ and now the kinetic evolution at different levels of resolution
 * [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
 * [[Chapter 8: Phase transitions and critical phenomena|Animations - Chapter 8]].</pre>
 </div>
-<div created="20201124000927970" modified="20211018152309400" tags="" title="Class Notes">
+<div created="20201124000927970" modified="20211027155320600" tags="" title="Class Notes">
 <pre>A good part of this course will be based on the following, self-contained, [ext[notes|files/phys5201_notes.pdf]]. You can download them if you wish. Not all topics in this course are covered in the notes, so additional reading suggestions are given below.
 
 !!!! September 8 - 17: Chapter 1. Review of Thermodynamics
@@ -10765,19 +10765,11 @@ Additional notes have been uploaded (complex read):
 * Blackbody radiation. Schwabl, pages 197-205.
 * Lattice vibrations. Schwabl, pages 206-213. [ext[Notes on normal modes and their quantization|files/lattice_vibration_phonons.pdf]].
 
----
-
-Mid Term Exam material
-
----
-
-!!!! October 18 - . Chapter 5. Quantum ideal systems
+!!!! October 18 - October 27. Chapter 5. Quantum ideal systems
 * Free electron gas. Schwabl, pages 176-188. [[Fermi surface of a free electron gas in d=3|https://image1.slideserve.com/3005774/slide17-l.jpg]]. [[A more complex Fermi surface|https://www.researchgate.net/profile/Pasquale_Marra3/publication/344294543/figure/download/fig3/AS:936954082361345@1600398669638/Fermi-surface-of-WP-in-the-first-Brillouin-zone-with-spinorbit-coupling-In-panels-a.ppm]].
 * Bose-Einstein condensation. Schwabl, pages 190-197.
 
----
-
-!!!! Chapter 6. Fluctuations
+!!!! October 27 - October . Chapter 6. Fluctuations
 *  [ext[Class notes|files/phys5201_notes.pdf]], chapters 4.3 and 4.4 are an introduction to fluctuations within thermodynamics.
 * Statistical Mechanics treatment of fluctuations in the case of a fluctuating interface. [ext[Class notes|files/phys5201_notes.pdf]], chapter 5. We will cover this chapter in its entirety. It is probably a first example for you of several important concepts in this semester:
 ** A particular system in which fluctuations are not negligible, in fact they are dominant.
@@ -10785,6 +10777,8 @@ Mid Term Exam material
 ** Anomalously large fluctuations tied to a broken symmetry.
 ** A few examples and movies have been uploaded in [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
 * Scattering experiments to measure correlation functions.  [ext[Class notes|files/phys5201_notes.pdf]], chapter 7.
+
+---
 
 !!!! Chapter 7. Fluctuations and broken symmetry.
 *  [ext[Class notes|files/phys5201_notes.pdf]], chapter 6. 
